<resources>
    <string name="app_name">Jerd</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="how_to">How To</string>
    <string name="account">Manage Account</string>

    <string name="tools_activity">Tools</string>
    <string name="tools_descr">Select a tool to open.</string>
    <string name="recorder">Recorder</string>
    <string name="interview_questions">Interview Questions</string>
    <string name="camera">Camera</string>
    <string name="notes">Notes</string>
    <string name="files_activity">My Files</string>
    <string name="send_in_activity">Send Files</string>
    <string name="check_activity">Check Files</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register new account</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect">The username or password is incorrect, or your account has not been create yet.</string>
    <string name="error_field_required">This field is required</string>
    <string name="prompt_username">Username</string>
    <string name="auth_failed">Login Failed</string>
    <string name="error_already">An account with this email already exists.</string>
    <string name="auth_failed_create">Account Creation Failed</string>

    <!-- Strings related to how to page -->
    <string name="tools_howto">Tools include the camera, notes taker, audio recorder, and tips. From the drop down menu on each page, choose the project your file is a part of. When you name your file, the current date will be tacked onto the end of each.</string>
    <string name="myfiles_howto">To create a new project, click on the pink button in the bottom right of the screen. To view files within a project, click the project folder. To view the file, click on the file.</string>
    <string name="checkfiles_howto">To get files that another user has uploaded, press the pink button in the bottom right of the screen and enter its exact name (including extension). If your file is found, it will be downloaded and will appear on the page. Click on it to view.</string>
    <string name="accounts_howto">You can check if you are signed in by clicking on the "Sign in" option. You can also sign into a different account, or create a new account, which requires email verification. You can also change your email or password on an account. </string>
</resources>
