<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/tools_activity"
        android:textSize="50sp"
        android:textAlignment="center"
        android:paddingTop="@dimen/activity_vertical_margin"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/tools_descr"
        android:textSize="20sp"
        android:textAlignment="center"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textStyle="italic"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal"
            android:layout_columnSpan="2"
            android:layout_rowSpan="1"
            android:layout_gravity="fill"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/large_padding">
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/files_img"
                    android:src="@drawable/ic_files"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/interview_tips"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:layout_below="@id/files_img"
                    android:textSize="16sp"
                    android:textAlignment="center"/>
            </RelativeLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/recorder_img"
                    android:src="@drawable/ic_recorder"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/recorder"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:layout_below="@id/recorder_img"
                    android:textSize="16sp"
                    android:textAlignment="center"/>
            </RelativeLayout>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal"
            android:layout_columnSpan="2"
            android:layout_rowSpan="1"
            android:layout_gravity="fill"
            android:paddingBottom="@dimen/large_padding">
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/camera_img"
                    android:src="@drawable/ic_camera"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/camera"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:layout_below="@id/camera_img"
                    android:textSize="16sp"
                    android:textAlignment="center"/>
            </RelativeLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/notes_img"
                    android:src="@drawable/ic_notes"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/notes"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:layout_below="@id/notes_img"
                    android:textSize="16sp"
                    android:textAlignment="center"/>
            </RelativeLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>


    </GridLayout>
</LinearLayout>